--- a/metropolis-hastings-from-scratch.ipynb
+++ b/metropolis-hastings-from-scratch.ipynb
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "grand-occasion",
    "metadata": {},
    "outputs": [],
@@ -171,7 +171,7 @@
     "def manual_log_like_normal(x, data):\n",
     "    #x[0]=mu, x[1]=sigma (new or current)\n",
     "    #data = the observation\n",
-    "    return np.sum(-np.log(x[1] * np.sqrt(2* np.pi) )-((data-x[0])**2) / (2*x[1]**2))\n"
+    "    return np.sum(-np.log( x[1] * np.sqrt(2* np.pi) -((data-x[0])**2) / (2*x[1]**2)))\n"
    ]
   },
   {
@@ -671,7 +671,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.13 ('pymc_env')",
+   "display_name": "Python 3.8.2 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -685,11 +685,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.2"
   },
   "vscode": {
    "interpreter": {
-    "hash": "6fa3d4814c1af4bb197157d3df44f2de8366517a44b37c582d7713f05d08ceb6"
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
    }
   }
  },
