--- a/metropolis-hastings-from-scratch.ipynb
+++ b/metropolis-hastings-from-scratch.ipynb
@@ -171,7 +171,12 @@
     "def manual_log_like_normal(x, data):\n",
     "    #x[0]=mu, x[1]=sigma (new or current)\n",
     "    #data = the observation\n",
-    "    return np.sum(-np.log( x[1] * np.sqrt(2* np.pi) -((data-x[0])**2) / (2*x[1]**2)))\n"
+    "    # np.sum(-np.log(\n",
+    "    #     x[1] * np.sqrt(2* np.pi) )-((data-x[0])**2) / (2*x[1]**2))\n",
+    "    return np.sum(-np.log( \n",
+    "        x[1] * np.sqrt(2* np.pi)) -((data-x[0])**2) / (2*x[1]**2)\n",
+    "        )\n",
+    "    \n"
    ]
   },
   {
